Fix api/database return object
