# metabase/api/openapi.yaml
@@ -38,9 +38,7 @@ paths:
           content:
             application/json:
               schema:
-                items:
-                  $ref: '#/components/schemas/Database'
-                type: array
+                $ref: '#/components/schemas/DatabaseList'
           description: successful operation
       summary: List Databases
       tags:
@@ -145,35 +143,123 @@ paths:
       - permissions
 components:
   schemas:
-    DatabaseDetails:
+    DatabaseList:
       example:
-        connProperties: connProperties
-        let-user-control-scheduling: true
-        password: password
-        dbname: dbname
-        port: 6
-        host: host
-        user: user
-        authMech: 1
+        total: 5
+        data:
+        - description: description
+          created_at: 2000-01-23T04:56:07.000+00:00
+          caveats: caveats
+          is_sample: true
+          features:
+          - features
+          - features
+          metadata_sync_schedule: metadata_sync_schedule
+          tables:
+          - schema: schema
+            entity_name: entity_name
+            description: description
+            active: true
+            created_at: 2000-01-23T04:56:07.000+00:00
+            rows: 6
+            display_name: display_name
+            raw_table_id: raw_table_id
+            caveats: caveats
+            entity_type: entity_type
+            show_in_getting_started: true
+            db_id: 5
+            updated_at: 2000-01-23T04:56:07.000+00:00
+            name: name
+            points_of_interest: points_of_interest
+            id: 1
+            visibility_type: visibility_type
+          - schema: schema
+            entity_name: entity_name
+            description: description
+            active: true
+            created_at: 2000-01-23T04:56:07.000+00:00
+            rows: 6
+            display_name: display_name
+            raw_table_id: raw_table_id
+            caveats: caveats
+            entity_type: entity_type
+            show_in_getting_started: true
+            db_id: 5
+            updated_at: 2000-01-23T04:56:07.000+00:00
+            name: name
+            points_of_interest: points_of_interest
+            id: 1
+            visibility_type: visibility_type
+          is_full_sync: true
+          native_permissions: native_permissions
+          updated_at: 2000-01-23T04:56:07.000+00:00
+          engine: engine
+          name: name
+          points_of_interest: points_of_interest
+          details: "{}"
+          id: 0
+          cache_field_values_schedule: cache_field_values_schedule
+        - description: description
+          created_at: 2000-01-23T04:56:07.000+00:00
+          caveats: caveats
+          is_sample: true
+          features:
+          - features
+          - features
+          metadata_sync_schedule: metadata_sync_schedule
+          tables:
+          - schema: schema
+            entity_name: entity_name
+            description: description
+            active: true
+            created_at: 2000-01-23T04:56:07.000+00:00
+            rows: 6
+            display_name: display_name
+            raw_table_id: raw_table_id
+            caveats: caveats
+            entity_type: entity_type
+            show_in_getting_started: true
+            db_id: 5
+            updated_at: 2000-01-23T04:56:07.000+00:00
+            name: name
+            points_of_interest: points_of_interest
+            id: 1
+            visibility_type: visibility_type
+          - schema: schema
+            entity_name: entity_name
+            description: description
+            active: true
+            created_at: 2000-01-23T04:56:07.000+00:00
+            rows: 6
+            display_name: display_name
+            raw_table_id: raw_table_id
+            caveats: caveats
+            entity_type: entity_type
+            show_in_getting_started: true
+            db_id: 5
+            updated_at: 2000-01-23T04:56:07.000+00:00
+            name: name
+            points_of_interest: points_of_interest
+            id: 1
+            visibility_type: visibility_type
+          is_full_sync: true
+          native_permissions: native_permissions
+          updated_at: 2000-01-23T04:56:07.000+00:00
+          engine: engine
+          name: name
+          points_of_interest: points_of_interest
+          details: "{}"
+          id: 0
+          cache_field_values_schedule: cache_field_values_schedule
       properties:
-        host:
-          type: string
-        port:
-          format: int32
+        data:
+          items:
+            $ref: '#/components/schemas/Database'
+          type: array
+        total:
           type: integer
-        dbname:
-          type: string
-        authMech:
-          format: int32
-          type: integer
-        user:
-          type: string
-        password:
-          type: string
-        connProperties:
-          type: string
-        let-user-control-scheduling:
-          type: boolean
+      type: object
+    DatabaseDetails:
       type: object
     DatabaseTable:
       example:
@@ -182,17 +268,17 @@ components:
         description: description
         active: true
         created_at: 2000-01-23T04:56:07.000+00:00
-        rows: 5
+        rows: 6
         display_name: display_name
         raw_table_id: raw_table_id
         caveats: caveats
         entity_type: entity_type
         show_in_getting_started: true
-        db_id: 2
+        db_id: 5
         updated_at: 2000-01-23T04:56:07.000+00:00
         name: name
         points_of_interest: points_of_interest
-        id: 5
+        id: 1
         visibility_type: visibility_type
       properties:
         description:
@@ -257,34 +343,34 @@ components:
           description: description
           active: true
           created_at: 2000-01-23T04:56:07.000+00:00
-          rows: 5
+          rows: 6
           display_name: display_name
           raw_table_id: raw_table_id
           caveats: caveats
           entity_type: entity_type
           show_in_getting_started: true
-          db_id: 2
+          db_id: 5
           updated_at: 2000-01-23T04:56:07.000+00:00
           name: name
           points_of_interest: points_of_interest
-          id: 5
+          id: 1
           visibility_type: visibility_type
         - schema: schema
           entity_name: entity_name
           description: description
           active: true
           created_at: 2000-01-23T04:56:07.000+00:00
-          rows: 5
+          rows: 6
           display_name: display_name
           raw_table_id: raw_table_id
           caveats: caveats
           entity_type: entity_type
           show_in_getting_started: true
-          db_id: 2
+          db_id: 5
           updated_at: 2000-01-23T04:56:07.000+00:00
           name: name
           points_of_interest: points_of_interest
-          id: 5
+          id: 1
           visibility_type: visibility_type
         is_full_sync: true
         native_permissions: native_permissions
@@ -292,15 +378,7 @@ components:
         engine: engine
         name: name
         points_of_interest: points_of_interest
-        details:
-          connProperties: connProperties
-          let-user-control-scheduling: true
-          password: password
-          dbname: dbname
-          port: 6
-          host: host
-          user: user
-          authMech: 1
+        details: "{}"
         id: 0
         cache_field_values_schedule: cache_field_values_schedule
       properties:
@@ -342,7 +420,7 @@ components:
           description: type unknown
           type: string
         details:
-          $ref: '#/components/schemas/DatabaseDetails'
+          type: object
         tables:
           items:
             $ref: '#/components/schemas/DatabaseTable'
